--- a/views/form-update.ejs
+++ b/views/form-update.ejs
@@ -1,21 +1,16 @@
-<h1>Update user</h1>
-<form action="/update" method="POST">
-  ID: <input type="text" name="id" value="<%= lop.id%>" /> <br />
-  IdDistrict:
-  <input type="String" name="IdDistrict" value="<%= lop.IdDistrict%>" /><br />
-  IdVillage:
-  <input type="String" name="IdVillage" value="<%= lop.IdVillage%>" /><br />
-  Address:
-  <input type="String" name="Address" value="<%= lop.Address%>" /><br />
-  IsGetNotification :
-  <input
-    type="String"
-    name="IsGetNotification"
-    value="<%= lop.IsGetNotification %>"
-  /><br />
-  IsVerified:
-  <input type="String" name="IsVerified" value="<%= lop.IsVerified%>" /><br />
-  IsGetOpen:
-  <input type="String" name="IsGetOpen" value="<%= lop.IsGetOpen%>" /><br />
-  <button type="submit">Update user</button>
+<h1>Sửa</h1>
+<form action="/update" method="post">
+
+    ID:<input type="text" name="id" value="<%= custommertwo.id %>"><br> Phone:
+    <input type="number" name="phone" value="<%= custommertwo.phone %>"> <br> Password:
+    <input type="text" name="password" value="<%= custommertwo.password %>"><br> TypeRegister:
+    <input type="text" name="register" value="<%= custommertwo.register %>"><br> Full name:
+    <input type="text" name="fname" value="<%= custommertwo.fname %>"><br> Type User:
+    <input type="number" name="type" value="<%= custommertwo.type %>"><br>
+
+
+    </table>
+
+
+    <button type="submit">update</button>
 </form>
